overflow problem solved

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    overflow: hidden;
 }
 
 .collapse .line{
